objects/AOPS_Account_Addendum_Legal_Other__c.object
<CustomObject>
    <fields>
        <fullName>CCU044F_CODE10__c</fullName>
        <label>CCU044F_CODE10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU044F_CODE25__c</fullName>
        <label>CCU044F_CODE25</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU044F_CODE33__c</fullName>
        <label>CCU044F_CODE33</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU044F_CURRENCY_ID__c</fullName>
        <label>CCU044F_CURRENCY_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU044F_CUSTOMER_ID__c</fullName>
        <label>CCU044F_CUSTOMER_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU044F_UPDATE_BY__c</fullName>
        <label>CCU044F_UPDATE_BY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU044F_UPDATE_TS__c</fullName>
        <label>CCU044F_UPDATE_TS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC044F_ACTION__c</fullName>
        <label>CXTC044F_ACTION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC044F_AOPS_KEY1__c</fullName>
        <label>AOPS KEY1 Account/Prospect</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC044F_MSG_TYPE__c</fullName>
        <label>Message Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC044F_TIMESTAMP__c</fullName>
        <label>CXTC044F_TIMESTAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <label>Number Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Status_Message__c</fullName>
        <externalId>true</externalId>
        <label>Sync Status Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Record ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AOPS Account Addendum Legal/Other</label>
    <nameField>
        <label>AOPS Account Addendum Legal/Other Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS Account Addendum Legal/Other</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>